# fast_lang_stream

./: LICENSE  README.md
app/: main.py  pyproject.toml
backend/: .env.example  main.py  pyproject.toml
backend/api/: routes.py  setup.py
backend/core/: config.py  llm.py  models.py  ollama.py
backend/utils/: logging.py  rate_limiter.py  version.py
frontend/: intro.py  main.py  pyproject.toml
frontend/components/: api_status_indicator.py  model_selector.py  parameter_tuner.py  sse_streamer.py
frontend/pages/: chatbot.py  image_descriptor.py
ui/: main.py
